# learnopengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
shaders/: vertex.vs
src/: main.cpp
src/headers/: shader.h
